# refactorial

./: .gitmodules  CMakeLists.txt  README.markdown  README.md  main.cpp  util.cpp  util.h  yamlreader.h
Transforms/: ArgumentChange.cpp  ExplicitConstructorTransform.cpp  ExplicitConstructorTransform.h  NamedDeclMatcher.cpp  NamedDeclMatcher.h  NamedDeclVisitor.h  Qt3To5UIClasses.cpp  RenameTransform.cpp  Replacer.cpp  Replacer.h  Transforms.cpp  Transforms.h  replacer.cpp  replacer.h
docker/: Dockerfile
docker/scripts/: build.sh
example/: README.md  example.cpp  example.h  myuifile_ui.h  refactors.yml  ui.cpp  ui.h  ui.yml
include/: AugmentedJSONCompilationDatabase.h  util.h  yamlreader.h
include/Transforms/: ArgumentChange.h  ExplicitConstructorTransform.h  NamedDeclMatcher.h  NamedDeclRemover.h  NamedDeclRenamer.h  NamedDeclVisitor.h  Qt3To5UIClasses.h  Remover.h  Replacer.h  Transforms.h
llvm/utils/docker/jammy/: Dockerfile
llvm/utils/docker/scripts/: build_install_llvm.sh
src/: AugmentedJSONCompilationDatabase.cpp  main.cpp  util.cpp
src/Transforms/: AccessorsTransform.cpp  ArgumentChange.cpp  ExplicitConstructorTransform.cpp  ExtractParameterTransform.cpp  MethodMoveTransform.cpp  NamedDeclMatcher.cpp  NamedDeclRemover.cpp  NamedDeclRenamer.cpp  Qt3To5UIClasses.cpp  RemoveTransform.cpp  Remover.cpp  RenameTransform.cpp  Replacer.cpp  Transforms.cpp
tests/Accessors/: CMakeLists.txt
tests/FunctionRemove/: CMakeLists.txt  foo.cpp.in  foo.h.in  function_remove.yml
tests/FunctionRename/: CMakeLists.txt  function_rename.yml
